--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -18,8 +18,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-    - name: Copy sqlite_phpunit.xml to phpunit.xml
-      run: php -r "file_exists('sqlite_phpunit.xml') || copy('sqlite_phpunit.xml', 'phpunit.xml');"
+    - name: Copy  phpunit.xml
+      run: php -r "file_exists('phpunit.xml') || copy('phpunit.xml.sqlite', 'phpunit.xml');"
     - name: Install Dependencies
       run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
     - name: Generate key
@@ -30,8 +30,13 @@ jobs:
       run: |
         mkdir -p database
         touch database/database.sqlite
+    - name: Run migrations
+      env:
+        DB_CONNECTION: sqlite
+        DB_DATABASE: database/database.sqlite
+      run: php artisan migrate
     - name: Execute tests (Unit and Feature tests) via PHPUnit
       env:
         DB_CONNECTION: sqlite
-        DB_DATABASE: ":memory:"
+        DB_DATABASE: database/database.sqlite
       run: vendor/bin/phpunit
