sqlite for testing with github actions

--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -17,7 +17,7 @@ jobs:
         php-version: '8.0'
     - uses: actions/checkout@v2
     - name: Copy .env
-      run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+      run: php -r "file_exists('.env') || copy('.env.sqlite', '.env');"
     - name: Copy  phpunit.xml
       run: php -r "file_exists('phpunit.xml') || copy('phpunit.xml.sqlite', 'phpunit.xml');"
     - name: Install Dependencies
