--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -40,9 +40,13 @@ jobs:
         env:
           DB_CONNECTION: mysql
           DB_DATABASE: mvhapi_test
+          DB_PORT: 3306
+          DB_USER: root
         run: php artisan migrate
       - name: Execute tests (Unit and Feature tests) via PHPUnit
         env:
           DB_CONNECTION: mysql
           DB_DATABASE: mvhapi_test
+          DB_PORT: 3306
+          DB_USER: root
         run: vendor/bin/phpunit
