--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -9,10 +9,11 @@ jobs:
 
     services:
       mysql:
-        image: mysql:5.7
+        image: mariadb:10.2
         env:
           MYSQL_ALLOW_EMPTY_PASSWORD: yes
           MYSQL_DATABASE: mvhapi_test
+          MYSQL_USER: root
         ports:
           - 3306
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
