--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -7,17 +7,6 @@ jobs:
     name: Run MvhApi Tests
     runs-on: ubuntu-latest
 
-    services:
-      mysql:
-        image: mariadb:10.2
-        env:
-          MYSQL_ALLOW_EMPTY_PASSWORD: yes
-          MYSQL_DATABASE: mvhapi_test
-          MYSQL_USER: root
-        ports:
-          - 3306
-        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
-
     steps:
       - uses: shivammathur/setup-php@b7d1d9c9a92d8d8463ce36d7f60da34d461724f8
         with:
@@ -25,29 +14,25 @@ jobs:
       - uses: actions/checkout@v2
       - name: Copy .env
         run: cp .env.example .env
-#      - name: Copy  phpunit.xml
-#        run: cp phpunit.xml.sqlite phpunit.xml
+      - name: Copy  phpunit.xml
+        run: cp phpunit.xml.sqlite phpunit.xml
       - name: Install Dependencies
         run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
       - name: Generate key
         run: php artisan key:generate
       - name: Directory Permissions
         run: chmod -R 777 storage bootstrap/cache
-#      - name: Create Database
-#        run: |
-#          mkdir -p database
-#          touch database/database.sqlite
+      - name: Create Database
+        run: |
+          mkdir -p database
+          touch database/database.sqlite
       - name: Run migrations
         env:
-          DB_CONNECTION: mysql
-          DB_DATABASE: mvhapi_test
-          DB_PORT: 3306
-          DB_USER: root
+          DB_CONNECTION: sqlite
+          DB_DATABASE: database/database.sqlite
         run: php artisan migrate
       - name: Execute tests (Unit and Feature tests) via PHPUnit
         env:
-          DB_CONNECTION: mysql
-          DB_DATABASE: mvhapi_test
-          DB_PORT: 3306
-          DB_USER: root
+          DB_CONNECTION: sqlite
+          DB_DATABASE: database/database.sqlite
         run: vendor/bin/phpunit
